// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionsForm Renders a permissions form 1`] = `
<PermissionsForm
  iri="https://mypod.myhost.com"
  permission={
    Object {
      "acl": Object {
        "append": true,
        "control": true,
        "read": true,
        "write": true,
      },
      "alias": "Full Control",
      "profile": Object {
        "webId": "https://mypod.myhost.com/profile/card#me",
      },
      "webId": "https://mypod.myhost.com/profile/card#me",
    }
  }
  warnOnSubmit={false}
>
  <section>
    <WithStyles(ForwardRef(Select))
      id="demo-simple-select"
      labelId="demo-simple-select-label"
      onChange={[Function]}
      value="Control"
    >
      <ForwardRef(Select)
        classes={
          Object {
            "disabled": "Mui-disabled",
            "filled": "MuiSelect-filled",
            "icon": "MuiSelect-icon",
            "iconFilled": "MuiSelect-iconFilled",
            "iconOpen": "MuiSelect-iconOpen",
            "iconOutlined": "MuiSelect-iconOutlined",
            "nativeInput": "MuiSelect-nativeInput",
            "outlined": "MuiSelect-outlined",
            "root": "MuiSelect-root",
            "select": "MuiSelect-select",
            "selectMenu": "MuiSelect-selectMenu",
          }
        }
        id="demo-simple-select"
        labelId="demo-simple-select-label"
        onChange={[Function]}
        value="Control"
      >
        <WithStyles(ForwardRef(Input))
          inputComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "IconComponent": [Function],
                "MenuProps": [Function],
                "SelectDisplayProps": [Function],
                "aria-label": [Function],
                "autoFocus": [Function],
                "autoWidth": [Function],
                "children": [Function],
                "className": [Function],
                "classes": [Function],
                "defaultValue": [Function],
                "disabled": [Function],
                "displayEmpty": [Function],
                "inputRef": [Function],
                "labelId": [Function],
                "multiple": [Function],
                "name": [Function],
                "onBlur": [Function],
                "onChange": [Function],
                "onClose": [Function],
                "onFocus": [Function],
                "onOpen": [Function],
                "open": [Function],
                "readOnly": [Function],
                "renderValue": [Function],
                "tabIndex": [Function],
                "type": [Function],
                "value": [Function],
                "variant": [Function],
              },
              "render": [Function],
            }
          }
          inputProps={
            Object {
              "IconComponent": Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
              },
              "MenuProps": undefined,
              "SelectDisplayProps": Object {
                "id": "demo-simple-select",
              },
              "autoWidth": false,
              "children": Array [
                <WithStyles(ForwardRef(MenuItem))
                  value="No access"
                >
                  No access
                </WithStyles(ForwardRef(MenuItem))>,
                <WithStyles(ForwardRef(MenuItem))
                  value="View"
                >
                  View
                </WithStyles(ForwardRef(MenuItem))>,
                <WithStyles(ForwardRef(MenuItem))
                  value="Edit"
                >
                  Edit
                </WithStyles(ForwardRef(MenuItem))>,
                <WithStyles(ForwardRef(MenuItem))
                  value="Append"
                >
                  Append
                </WithStyles(ForwardRef(MenuItem))>,
                <WithStyles(ForwardRef(MenuItem))
                  value="Control"
                >
                  Control
                </WithStyles(ForwardRef(MenuItem))>,
              ],
              "classes": Object {
                "disabled": "Mui-disabled",
                "filled": "MuiSelect-filled",
                "icon": "MuiSelect-icon",
                "iconFilled": "MuiSelect-iconFilled",
                "iconOpen": "MuiSelect-iconOpen",
                "iconOutlined": "MuiSelect-iconOutlined",
                "nativeInput": "MuiSelect-nativeInput",
                "outlined": "MuiSelect-outlined",
                "root": "MuiSelect-root",
                "select": "MuiSelect-select",
                "selectMenu": "MuiSelect-selectMenu",
              },
              "displayEmpty": false,
              "labelId": "demo-simple-select-label",
              "multiple": false,
              "onClose": undefined,
              "onOpen": undefined,
              "open": undefined,
              "renderValue": undefined,
              "type": undefined,
              "variant": "standard",
            }
          }
          onChange={[Function]}
          value="Control"
        >
          <ForwardRef(Input)
            classes={
              Object {
                "colorSecondary": "MuiInput-colorSecondary",
                "disabled": "Mui-disabled",
                "error": "Mui-error",
                "focused": "Mui-focused",
                "formControl": "MuiInput-formControl",
                "fullWidth": "MuiInput-fullWidth",
                "input": "MuiInput-input",
                "inputMarginDense": "MuiInput-inputMarginDense",
                "inputMultiline": "MuiInput-inputMultiline",
                "inputTypeSearch": "MuiInput-inputTypeSearch",
                "marginDense": "MuiInput-marginDense",
                "multiline": "MuiInput-multiline",
                "root": "MuiInput-root",
                "underline": "MuiInput-underline",
              }
            }
            inputComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "IconComponent": [Function],
                  "MenuProps": [Function],
                  "SelectDisplayProps": [Function],
                  "aria-label": [Function],
                  "autoFocus": [Function],
                  "autoWidth": [Function],
                  "children": [Function],
                  "className": [Function],
                  "classes": [Function],
                  "defaultValue": [Function],
                  "disabled": [Function],
                  "displayEmpty": [Function],
                  "inputRef": [Function],
                  "labelId": [Function],
                  "multiple": [Function],
                  "name": [Function],
                  "onBlur": [Function],
                  "onChange": [Function],
                  "onClose": [Function],
                  "onFocus": [Function],
                  "onOpen": [Function],
                  "open": [Function],
                  "readOnly": [Function],
                  "renderValue": [Function],
                  "tabIndex": [Function],
                  "type": [Function],
                  "value": [Function],
                  "variant": [Function],
                },
                "render": [Function],
              }
            }
            inputProps={
              Object {
                "IconComponent": Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                },
                "MenuProps": undefined,
                "SelectDisplayProps": Object {
                  "id": "demo-simple-select",
                },
                "autoWidth": false,
                "children": Array [
                  <WithStyles(ForwardRef(MenuItem))
                    value="No access"
                  >
                    No access
                  </WithStyles(ForwardRef(MenuItem))>,
                  <WithStyles(ForwardRef(MenuItem))
                    value="View"
                  >
                    View
                  </WithStyles(ForwardRef(MenuItem))>,
                  <WithStyles(ForwardRef(MenuItem))
                    value="Edit"
                  >
                    Edit
                  </WithStyles(ForwardRef(MenuItem))>,
                  <WithStyles(ForwardRef(MenuItem))
                    value="Append"
                  >
                    Append
                  </WithStyles(ForwardRef(MenuItem))>,
                  <WithStyles(ForwardRef(MenuItem))
                    value="Control"
                  >
                    Control
                  </WithStyles(ForwardRef(MenuItem))>,
                ],
                "classes": Object {
                  "disabled": "Mui-disabled",
                  "filled": "MuiSelect-filled",
                  "icon": "MuiSelect-icon",
                  "iconFilled": "MuiSelect-iconFilled",
                  "iconOpen": "MuiSelect-iconOpen",
                  "iconOutlined": "MuiSelect-iconOutlined",
                  "nativeInput": "MuiSelect-nativeInput",
                  "outlined": "MuiSelect-outlined",
                  "root": "MuiSelect-root",
                  "select": "MuiSelect-select",
                  "selectMenu": "MuiSelect-selectMenu",
                },
                "displayEmpty": false,
                "labelId": "demo-simple-select-label",
                "multiple": false,
                "onClose": undefined,
                "onOpen": undefined,
                "open": undefined,
                "renderValue": undefined,
                "type": undefined,
                "variant": "standard",
              }
            }
            onChange={[Function]}
            value="Control"
          >
            <WithStyles(ForwardRef(InputBase))
              classes={
                Object {
                  "colorSecondary": "MuiInput-colorSecondary",
                  "disabled": "Mui-disabled",
                  "error": "Mui-error",
                  "focused": "Mui-focused",
                  "formControl": "MuiInput-formControl",
                  "fullWidth": "MuiInput-fullWidth",
                  "input": "MuiInput-input",
                  "inputMarginDense": "MuiInput-inputMarginDense",
                  "inputMultiline": "MuiInput-inputMultiline",
                  "inputTypeSearch": "MuiInput-inputTypeSearch",
                  "marginDense": "MuiInput-marginDense",
                  "multiline": "MuiInput-multiline",
                  "root": "MuiInput-root MuiInput-underline",
                  "underline": null,
                }
              }
              fullWidth={false}
              inputComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "propTypes": Object {
                    "IconComponent": [Function],
                    "MenuProps": [Function],
                    "SelectDisplayProps": [Function],
                    "aria-label": [Function],
                    "autoFocus": [Function],
                    "autoWidth": [Function],
                    "children": [Function],
                    "className": [Function],
                    "classes": [Function],
                    "defaultValue": [Function],
                    "disabled": [Function],
                    "displayEmpty": [Function],
                    "inputRef": [Function],
                    "labelId": [Function],
                    "multiple": [Function],
                    "name": [Function],
                    "onBlur": [Function],
                    "onChange": [Function],
                    "onClose": [Function],
                    "onFocus": [Function],
                    "onOpen": [Function],
                    "open": [Function],
                    "readOnly": [Function],
                    "renderValue": [Function],
                    "tabIndex": [Function],
                    "type": [Function],
                    "value": [Function],
                    "variant": [Function],
                  },
                  "render": [Function],
                }
              }
              inputProps={
                Object {
                  "IconComponent": Object {
                    "$$typeof": Symbol(react.memo),
                    "compare": null,
                    "type": Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "render": [Function],
                    },
                  },
                  "MenuProps": undefined,
                  "SelectDisplayProps": Object {
                    "id": "demo-simple-select",
                  },
                  "autoWidth": false,
                  "children": Array [
                    <WithStyles(ForwardRef(MenuItem))
                      value="No access"
                    >
                      No access
                    </WithStyles(ForwardRef(MenuItem))>,
                    <WithStyles(ForwardRef(MenuItem))
                      value="View"
                    >
                      View
                    </WithStyles(ForwardRef(MenuItem))>,
                    <WithStyles(ForwardRef(MenuItem))
                      value="Edit"
                    >
                      Edit
                    </WithStyles(ForwardRef(MenuItem))>,
                    <WithStyles(ForwardRef(MenuItem))
                      value="Append"
                    >
                      Append
                    </WithStyles(ForwardRef(MenuItem))>,
                    <WithStyles(ForwardRef(MenuItem))
                      value="Control"
                    >
                      Control
                    </WithStyles(ForwardRef(MenuItem))>,
                  ],
                  "classes": Object {
                    "disabled": "Mui-disabled",
                    "filled": "MuiSelect-filled",
                    "icon": "MuiSelect-icon",
                    "iconFilled": "MuiSelect-iconFilled",
                    "iconOpen": "MuiSelect-iconOpen",
                    "iconOutlined": "MuiSelect-iconOutlined",
                    "nativeInput": "MuiSelect-nativeInput",
                    "outlined": "MuiSelect-outlined",
                    "root": "MuiSelect-root",
                    "select": "MuiSelect-select",
                    "selectMenu": "MuiSelect-selectMenu",
                  },
                  "displayEmpty": false,
                  "labelId": "demo-simple-select-label",
                  "multiple": false,
                  "onClose": undefined,
                  "onOpen": undefined,
                  "open": undefined,
                  "renderValue": undefined,
                  "type": undefined,
                  "variant": "standard",
                }
              }
              multiline={false}
              onChange={[Function]}
              type="text"
              value="Control"
            >
              <ForwardRef(InputBase)
                classes={
                  Object {
                    "adornedEnd": "MuiInputBase-adornedEnd",
                    "adornedStart": "MuiInputBase-adornedStart",
                    "colorSecondary": "MuiInputBase-colorSecondary MuiInput-colorSecondary",
                    "disabled": "Mui-disabled Mui-disabled",
                    "error": "Mui-error Mui-error",
                    "focused": "Mui-focused Mui-focused",
                    "formControl": "MuiInputBase-formControl MuiInput-formControl",
                    "fullWidth": "MuiInputBase-fullWidth MuiInput-fullWidth",
                    "input": "MuiInputBase-input MuiInput-input",
                    "inputAdornedEnd": "MuiInputBase-inputAdornedEnd",
                    "inputAdornedStart": "MuiInputBase-inputAdornedStart",
                    "inputHiddenLabel": "MuiInputBase-inputHiddenLabel",
                    "inputMarginDense": "MuiInputBase-inputMarginDense MuiInput-inputMarginDense",
                    "inputMultiline": "MuiInputBase-inputMultiline MuiInput-inputMultiline",
                    "inputTypeSearch": "MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch",
                    "marginDense": "MuiInputBase-marginDense MuiInput-marginDense",
                    "multiline": "MuiInputBase-multiline MuiInput-multiline",
                    "root": "MuiInputBase-root MuiInput-root MuiInput-underline",
                  }
                }
                fullWidth={false}
                inputComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "propTypes": Object {
                      "IconComponent": [Function],
                      "MenuProps": [Function],
                      "SelectDisplayProps": [Function],
                      "aria-label": [Function],
                      "autoFocus": [Function],
                      "autoWidth": [Function],
                      "children": [Function],
                      "className": [Function],
                      "classes": [Function],
                      "defaultValue": [Function],
                      "disabled": [Function],
                      "displayEmpty": [Function],
                      "inputRef": [Function],
                      "labelId": [Function],
                      "multiple": [Function],
                      "name": [Function],
                      "onBlur": [Function],
                      "onChange": [Function],
                      "onClose": [Function],
                      "onFocus": [Function],
                      "onOpen": [Function],
                      "open": [Function],
                      "readOnly": [Function],
                      "renderValue": [Function],
                      "tabIndex": [Function],
                      "type": [Function],
                      "value": [Function],
                      "variant": [Function],
                    },
                    "render": [Function],
                  }
                }
                inputProps={
                  Object {
                    "IconComponent": Object {
                      "$$typeof": Symbol(react.memo),
                      "compare": null,
                      "type": Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      },
                    },
                    "MenuProps": undefined,
                    "SelectDisplayProps": Object {
                      "id": "demo-simple-select",
                    },
                    "autoWidth": false,
                    "children": Array [
                      <WithStyles(ForwardRef(MenuItem))
                        value="No access"
                      >
                        No access
                      </WithStyles(ForwardRef(MenuItem))>,
                      <WithStyles(ForwardRef(MenuItem))
                        value="View"
                      >
                        View
                      </WithStyles(ForwardRef(MenuItem))>,
                      <WithStyles(ForwardRef(MenuItem))
                        value="Edit"
                      >
                        Edit
                      </WithStyles(ForwardRef(MenuItem))>,
                      <WithStyles(ForwardRef(MenuItem))
                        value="Append"
                      >
                        Append
                      </WithStyles(ForwardRef(MenuItem))>,
                      <WithStyles(ForwardRef(MenuItem))
                        value="Control"
                      >
                        Control
                      </WithStyles(ForwardRef(MenuItem))>,
                    ],
                    "classes": Object {
                      "disabled": "Mui-disabled",
                      "filled": "MuiSelect-filled",
                      "icon": "MuiSelect-icon",
                      "iconFilled": "MuiSelect-iconFilled",
                      "iconOpen": "MuiSelect-iconOpen",
                      "iconOutlined": "MuiSelect-iconOutlined",
                      "nativeInput": "MuiSelect-nativeInput",
                      "outlined": "MuiSelect-outlined",
                      "root": "MuiSelect-root",
                      "select": "MuiSelect-select",
                      "selectMenu": "MuiSelect-selectMenu",
                    },
                    "displayEmpty": false,
                    "labelId": "demo-simple-select-label",
                    "multiple": false,
                    "onClose": undefined,
                    "onOpen": undefined,
                    "open": undefined,
                    "renderValue": undefined,
                    "type": undefined,
                    "variant": "standard",
                  }
                }
                multiline={false}
                onChange={[Function]}
                type="text"
                value="Control"
              >
                <div
                  className="MuiInputBase-root MuiInput-root MuiInput-underline"
                  onClick={[Function]}
                >
                  <ForwardRef(SelectInput)
                    IconComponent={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        },
                      }
                    }
                    SelectDisplayProps={
                      Object {
                        "id": "demo-simple-select",
                      }
                    }
                    autoWidth={false}
                    className="MuiInputBase-input MuiInput-input"
                    classes={
                      Object {
                        "disabled": "Mui-disabled",
                        "filled": "MuiSelect-filled",
                        "icon": "MuiSelect-icon",
                        "iconFilled": "MuiSelect-iconFilled",
                        "iconOpen": "MuiSelect-iconOpen",
                        "iconOutlined": "MuiSelect-iconOutlined",
                        "nativeInput": "MuiSelect-nativeInput",
                        "outlined": "MuiSelect-outlined",
                        "root": "MuiSelect-root",
                        "select": "MuiSelect-select",
                        "selectMenu": "MuiSelect-selectMenu",
                      }
                    }
                    displayEmpty={false}
                    inputRef={[Function]}
                    labelId="demo-simple-select-label"
                    multiple={false}
                    onAnimationStart={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="Control"
                    variant="standard"
                  >
                    <div
                      aria-haspopup="listbox"
                      aria-labelledby="demo-simple-select-label demo-simple-select"
                      className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                      id="demo-simple-select"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      Control
                    </div>
                    <input
                      aria-hidden={true}
                      className="MuiSelect-nativeInput"
                      onAnimationStart={[Function]}
                      onChange={[Function]}
                      tabIndex={-1}
                      value="Control"
                    />
                    <ForwardRef(ArrowDropDownIcon)
                      className="MuiSelect-icon"
                    >
                      <WithStyles(ForwardRef(SvgIcon))
                        className="MuiSelect-icon"
                      >
                        <ForwardRef(SvgIcon)
                          className="MuiSelect-icon"
                          classes={
                            Object {
                              "colorAction": "MuiSvgIcon-colorAction",
                              "colorDisabled": "MuiSvgIcon-colorDisabled",
                              "colorError": "MuiSvgIcon-colorError",
                              "colorPrimary": "MuiSvgIcon-colorPrimary",
                              "colorSecondary": "MuiSvgIcon-colorSecondary",
                              "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                              "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                              "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                              "root": "MuiSvgIcon-root",
                            }
                          }
                        >
                          <svg
                            aria-hidden={true}
                            className="MuiSvgIcon-root MuiSelect-icon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 10l5 5 5-5z"
                            />
                          </svg>
                        </ForwardRef(SvgIcon)>
                      </WithStyles(ForwardRef(SvgIcon))>
                    </ForwardRef(ArrowDropDownIcon)>
                    <WithStyles(ForwardRef(Menu))
                      MenuListProps={
                        Object {
                          "aria-labelledby": "demo-simple-select-label",
                          "disableListWrap": true,
                          "role": "listbox",
                        }
                      }
                      PaperProps={
                        Object {
                          "style": Object {
                            "minWidth": undefined,
                          },
                        }
                      }
                      anchorEl={
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-label demo-simple-select"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                          id="demo-simple-select"
                          role="button"
                          tabindex="0"
                        >
                          Control
                        </div>
                      }
                      id="menu-"
                      onClose={[Function]}
                      open={false}
                    >
                      <ForwardRef(Menu)
                        MenuListProps={
                          Object {
                            "aria-labelledby": "demo-simple-select-label",
                            "disableListWrap": true,
                            "role": "listbox",
                          }
                        }
                        PaperProps={
                          Object {
                            "style": Object {
                              "minWidth": undefined,
                            },
                          }
                        }
                        anchorEl={
                          <div
                            aria-haspopup="listbox"
                            aria-labelledby="demo-simple-select-label demo-simple-select"
                            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                            id="demo-simple-select"
                            role="button"
                            tabindex="0"
                          >
                            Control
                          </div>
                        }
                        classes={
                          Object {
                            "list": "MuiMenu-list",
                            "paper": "MuiMenu-paper",
                          }
                        }
                        id="menu-"
                        onClose={[Function]}
                        open={false}
                      >
                        <WithStyles(ForwardRef(Popover))
                          PaperProps={
                            Object {
                              "classes": Object {
                                "root": "MuiMenu-paper",
                              },
                              "style": Object {
                                "minWidth": undefined,
                              },
                            }
                          }
                          anchorEl={
                            <div
                              aria-haspopup="listbox"
                              aria-labelledby="demo-simple-select-label demo-simple-select"
                              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                              id="demo-simple-select"
                              role="button"
                              tabindex="0"
                            >
                              Control
                            </div>
                          }
                          anchorOrigin={
                            Object {
                              "horizontal": "left",
                              "vertical": "top",
                            }
                          }
                          getContentAnchorEl={[Function]}
                          id="menu-"
                          onClose={[Function]}
                          onEntering={[Function]}
                          open={false}
                          transformOrigin={
                            Object {
                              "horizontal": "left",
                              "vertical": "top",
                            }
                          }
                          transitionDuration="auto"
                        >
                          <ForwardRef(Popover)
                            PaperProps={
                              Object {
                                "classes": Object {
                                  "root": "MuiMenu-paper",
                                },
                                "style": Object {
                                  "minWidth": undefined,
                                },
                              }
                            }
                            anchorEl={
                              <div
                                aria-haspopup="listbox"
                                aria-labelledby="demo-simple-select-label demo-simple-select"
                                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                                id="demo-simple-select"
                                role="button"
                                tabindex="0"
                              >
                                Control
                              </div>
                            }
                            anchorOrigin={
                              Object {
                                "horizontal": "left",
                                "vertical": "top",
                              }
                            }
                            classes={
                              Object {
                                "paper": "MuiPopover-paper",
                                "root": "MuiPopover-root",
                              }
                            }
                            getContentAnchorEl={[Function]}
                            id="menu-"
                            onClose={[Function]}
                            onEntering={[Function]}
                            open={false}
                            transformOrigin={
                              Object {
                                "horizontal": "left",
                                "vertical": "top",
                              }
                            }
                            transitionDuration="auto"
                          >
                            <ForwardRef(Modal)
                              BackdropProps={
                                Object {
                                  "invisible": true,
                                }
                              }
                              className="MuiPopover-root"
                              container={<body />}
                              id="menu-"
                              onClose={[Function]}
                              open={false}
                            />
                          </ForwardRef(Popover)>
                        </WithStyles(ForwardRef(Popover))>
                      </ForwardRef(Menu)>
                    </WithStyles(ForwardRef(Menu))>
                  </ForwardRef(SelectInput)>
                </div>
              </ForwardRef(InputBase)>
            </WithStyles(ForwardRef(InputBase))>
          </ForwardRef(Input)>
        </WithStyles(ForwardRef(Input))>
      </ForwardRef(Select)>
    </WithStyles(ForwardRef(Select))>
  </section>
</PermissionsForm>
`;

exports[`PermissionsForm it returns null if control is false 1`] = `
<PermissionsForm
  iri="https://mypod.myhost.com"
  permission={
    Object {
      "acl": Object {
        "append": true,
        "control": false,
        "read": true,
        "write": true,
      },
      "alias": "Full Control",
      "profile": Object {
        "webId": "https://mypod.myhost.com/profile/card#me",
      },
      "webId": "https://mypod.myhost.com/profile/card#me",
    }
  }
  warnOnSubmit={false}
>
  <section>
    <WithStyles(ForwardRef(Select))
      id="demo-simple-select"
      labelId="demo-simple-select-label"
      onChange={[Function]}
      value="Append"
    >
      <ForwardRef(Select)
        classes={
          Object {
            "disabled": "Mui-disabled",
            "filled": "MuiSelect-filled",
            "icon": "MuiSelect-icon",
            "iconFilled": "MuiSelect-iconFilled",
            "iconOpen": "MuiSelect-iconOpen",
            "iconOutlined": "MuiSelect-iconOutlined",
            "nativeInput": "MuiSelect-nativeInput",
            "outlined": "MuiSelect-outlined",
            "root": "MuiSelect-root",
            "select": "MuiSelect-select",
            "selectMenu": "MuiSelect-selectMenu",
          }
        }
        id="demo-simple-select"
        labelId="demo-simple-select-label"
        onChange={[Function]}
        value="Append"
      >
        <WithStyles(ForwardRef(Input))
          inputComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "IconComponent": [Function],
                "MenuProps": [Function],
                "SelectDisplayProps": [Function],
                "aria-label": [Function],
                "autoFocus": [Function],
                "autoWidth": [Function],
                "children": [Function],
                "className": [Function],
                "classes": [Function],
                "defaultValue": [Function],
                "disabled": [Function],
                "displayEmpty": [Function],
                "inputRef": [Function],
                "labelId": [Function],
                "multiple": [Function],
                "name": [Function],
                "onBlur": [Function],
                "onChange": [Function],
                "onClose": [Function],
                "onFocus": [Function],
                "onOpen": [Function],
                "open": [Function],
                "readOnly": [Function],
                "renderValue": [Function],
                "tabIndex": [Function],
                "type": [Function],
                "value": [Function],
                "variant": [Function],
              },
              "render": [Function],
            }
          }
          inputProps={
            Object {
              "IconComponent": Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
              },
              "MenuProps": undefined,
              "SelectDisplayProps": Object {
                "id": "demo-simple-select",
              },
              "autoWidth": false,
              "children": Array [
                <WithStyles(ForwardRef(MenuItem))
                  value="No access"
                >
                  No access
                </WithStyles(ForwardRef(MenuItem))>,
                <WithStyles(ForwardRef(MenuItem))
                  value="View"
                >
                  View
                </WithStyles(ForwardRef(MenuItem))>,
                <WithStyles(ForwardRef(MenuItem))
                  value="Edit"
                >
                  Edit
                </WithStyles(ForwardRef(MenuItem))>,
                <WithStyles(ForwardRef(MenuItem))
                  value="Append"
                >
                  Append
                </WithStyles(ForwardRef(MenuItem))>,
                <WithStyles(ForwardRef(MenuItem))
                  value="Control"
                >
                  Control
                </WithStyles(ForwardRef(MenuItem))>,
              ],
              "classes": Object {
                "disabled": "Mui-disabled",
                "filled": "MuiSelect-filled",
                "icon": "MuiSelect-icon",
                "iconFilled": "MuiSelect-iconFilled",
                "iconOpen": "MuiSelect-iconOpen",
                "iconOutlined": "MuiSelect-iconOutlined",
                "nativeInput": "MuiSelect-nativeInput",
                "outlined": "MuiSelect-outlined",
                "root": "MuiSelect-root",
                "select": "MuiSelect-select",
                "selectMenu": "MuiSelect-selectMenu",
              },
              "displayEmpty": false,
              "labelId": "demo-simple-select-label",
              "multiple": false,
              "onClose": undefined,
              "onOpen": undefined,
              "open": undefined,
              "renderValue": undefined,
              "type": undefined,
              "variant": "standard",
            }
          }
          onChange={[Function]}
          value="Append"
        >
          <ForwardRef(Input)
            classes={
              Object {
                "colorSecondary": "MuiInput-colorSecondary",
                "disabled": "Mui-disabled",
                "error": "Mui-error",
                "focused": "Mui-focused",
                "formControl": "MuiInput-formControl",
                "fullWidth": "MuiInput-fullWidth",
                "input": "MuiInput-input",
                "inputMarginDense": "MuiInput-inputMarginDense",
                "inputMultiline": "MuiInput-inputMultiline",
                "inputTypeSearch": "MuiInput-inputTypeSearch",
                "marginDense": "MuiInput-marginDense",
                "multiline": "MuiInput-multiline",
                "root": "MuiInput-root",
                "underline": "MuiInput-underline",
              }
            }
            inputComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "IconComponent": [Function],
                  "MenuProps": [Function],
                  "SelectDisplayProps": [Function],
                  "aria-label": [Function],
                  "autoFocus": [Function],
                  "autoWidth": [Function],
                  "children": [Function],
                  "className": [Function],
                  "classes": [Function],
                  "defaultValue": [Function],
                  "disabled": [Function],
                  "displayEmpty": [Function],
                  "inputRef": [Function],
                  "labelId": [Function],
                  "multiple": [Function],
                  "name": [Function],
                  "onBlur": [Function],
                  "onChange": [Function],
                  "onClose": [Function],
                  "onFocus": [Function],
                  "onOpen": [Function],
                  "open": [Function],
                  "readOnly": [Function],
                  "renderValue": [Function],
                  "tabIndex": [Function],
                  "type": [Function],
                  "value": [Function],
                  "variant": [Function],
                },
                "render": [Function],
              }
            }
            inputProps={
              Object {
                "IconComponent": Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                },
                "MenuProps": undefined,
                "SelectDisplayProps": Object {
                  "id": "demo-simple-select",
                },
                "autoWidth": false,
                "children": Array [
                  <WithStyles(ForwardRef(MenuItem))
                    value="No access"
                  >
                    No access
                  </WithStyles(ForwardRef(MenuItem))>,
                  <WithStyles(ForwardRef(MenuItem))
                    value="View"
                  >
                    View
                  </WithStyles(ForwardRef(MenuItem))>,
                  <WithStyles(ForwardRef(MenuItem))
                    value="Edit"
                  >
                    Edit
                  </WithStyles(ForwardRef(MenuItem))>,
                  <WithStyles(ForwardRef(MenuItem))
                    value="Append"
                  >
                    Append
                  </WithStyles(ForwardRef(MenuItem))>,
                  <WithStyles(ForwardRef(MenuItem))
                    value="Control"
                  >
                    Control
                  </WithStyles(ForwardRef(MenuItem))>,
                ],
                "classes": Object {
                  "disabled": "Mui-disabled",
                  "filled": "MuiSelect-filled",
                  "icon": "MuiSelect-icon",
                  "iconFilled": "MuiSelect-iconFilled",
                  "iconOpen": "MuiSelect-iconOpen",
                  "iconOutlined": "MuiSelect-iconOutlined",
                  "nativeInput": "MuiSelect-nativeInput",
                  "outlined": "MuiSelect-outlined",
                  "root": "MuiSelect-root",
                  "select": "MuiSelect-select",
                  "selectMenu": "MuiSelect-selectMenu",
                },
                "displayEmpty": false,
                "labelId": "demo-simple-select-label",
                "multiple": false,
                "onClose": undefined,
                "onOpen": undefined,
                "open": undefined,
                "renderValue": undefined,
                "type": undefined,
                "variant": "standard",
              }
            }
            onChange={[Function]}
            value="Append"
          >
            <WithStyles(ForwardRef(InputBase))
              classes={
                Object {
                  "colorSecondary": "MuiInput-colorSecondary",
                  "disabled": "Mui-disabled",
                  "error": "Mui-error",
                  "focused": "Mui-focused",
                  "formControl": "MuiInput-formControl",
                  "fullWidth": "MuiInput-fullWidth",
                  "input": "MuiInput-input",
                  "inputMarginDense": "MuiInput-inputMarginDense",
                  "inputMultiline": "MuiInput-inputMultiline",
                  "inputTypeSearch": "MuiInput-inputTypeSearch",
                  "marginDense": "MuiInput-marginDense",
                  "multiline": "MuiInput-multiline",
                  "root": "MuiInput-root MuiInput-underline",
                  "underline": null,
                }
              }
              fullWidth={false}
              inputComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "propTypes": Object {
                    "IconComponent": [Function],
                    "MenuProps": [Function],
                    "SelectDisplayProps": [Function],
                    "aria-label": [Function],
                    "autoFocus": [Function],
                    "autoWidth": [Function],
                    "children": [Function],
                    "className": [Function],
                    "classes": [Function],
                    "defaultValue": [Function],
                    "disabled": [Function],
                    "displayEmpty": [Function],
                    "inputRef": [Function],
                    "labelId": [Function],
                    "multiple": [Function],
                    "name": [Function],
                    "onBlur": [Function],
                    "onChange": [Function],
                    "onClose": [Function],
                    "onFocus": [Function],
                    "onOpen": [Function],
                    "open": [Function],
                    "readOnly": [Function],
                    "renderValue": [Function],
                    "tabIndex": [Function],
                    "type": [Function],
                    "value": [Function],
                    "variant": [Function],
                  },
                  "render": [Function],
                }
              }
              inputProps={
                Object {
                  "IconComponent": Object {
                    "$$typeof": Symbol(react.memo),
                    "compare": null,
                    "type": Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "render": [Function],
                    },
                  },
                  "MenuProps": undefined,
                  "SelectDisplayProps": Object {
                    "id": "demo-simple-select",
                  },
                  "autoWidth": false,
                  "children": Array [
                    <WithStyles(ForwardRef(MenuItem))
                      value="No access"
                    >
                      No access
                    </WithStyles(ForwardRef(MenuItem))>,
                    <WithStyles(ForwardRef(MenuItem))
                      value="View"
                    >
                      View
                    </WithStyles(ForwardRef(MenuItem))>,
                    <WithStyles(ForwardRef(MenuItem))
                      value="Edit"
                    >
                      Edit
                    </WithStyles(ForwardRef(MenuItem))>,
                    <WithStyles(ForwardRef(MenuItem))
                      value="Append"
                    >
                      Append
                    </WithStyles(ForwardRef(MenuItem))>,
                    <WithStyles(ForwardRef(MenuItem))
                      value="Control"
                    >
                      Control
                    </WithStyles(ForwardRef(MenuItem))>,
                  ],
                  "classes": Object {
                    "disabled": "Mui-disabled",
                    "filled": "MuiSelect-filled",
                    "icon": "MuiSelect-icon",
                    "iconFilled": "MuiSelect-iconFilled",
                    "iconOpen": "MuiSelect-iconOpen",
                    "iconOutlined": "MuiSelect-iconOutlined",
                    "nativeInput": "MuiSelect-nativeInput",
                    "outlined": "MuiSelect-outlined",
                    "root": "MuiSelect-root",
                    "select": "MuiSelect-select",
                    "selectMenu": "MuiSelect-selectMenu",
                  },
                  "displayEmpty": false,
                  "labelId": "demo-simple-select-label",
                  "multiple": false,
                  "onClose": undefined,
                  "onOpen": undefined,
                  "open": undefined,
                  "renderValue": undefined,
                  "type": undefined,
                  "variant": "standard",
                }
              }
              multiline={false}
              onChange={[Function]}
              type="text"
              value="Append"
            >
              <ForwardRef(InputBase)
                classes={
                  Object {
                    "adornedEnd": "MuiInputBase-adornedEnd",
                    "adornedStart": "MuiInputBase-adornedStart",
                    "colorSecondary": "MuiInputBase-colorSecondary MuiInput-colorSecondary",
                    "disabled": "Mui-disabled Mui-disabled",
                    "error": "Mui-error Mui-error",
                    "focused": "Mui-focused Mui-focused",
                    "formControl": "MuiInputBase-formControl MuiInput-formControl",
                    "fullWidth": "MuiInputBase-fullWidth MuiInput-fullWidth",
                    "input": "MuiInputBase-input MuiInput-input",
                    "inputAdornedEnd": "MuiInputBase-inputAdornedEnd",
                    "inputAdornedStart": "MuiInputBase-inputAdornedStart",
                    "inputHiddenLabel": "MuiInputBase-inputHiddenLabel",
                    "inputMarginDense": "MuiInputBase-inputMarginDense MuiInput-inputMarginDense",
                    "inputMultiline": "MuiInputBase-inputMultiline MuiInput-inputMultiline",
                    "inputTypeSearch": "MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch",
                    "marginDense": "MuiInputBase-marginDense MuiInput-marginDense",
                    "multiline": "MuiInputBase-multiline MuiInput-multiline",
                    "root": "MuiInputBase-root MuiInput-root MuiInput-underline",
                  }
                }
                fullWidth={false}
                inputComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "propTypes": Object {
                      "IconComponent": [Function],
                      "MenuProps": [Function],
                      "SelectDisplayProps": [Function],
                      "aria-label": [Function],
                      "autoFocus": [Function],
                      "autoWidth": [Function],
                      "children": [Function],
                      "className": [Function],
                      "classes": [Function],
                      "defaultValue": [Function],
                      "disabled": [Function],
                      "displayEmpty": [Function],
                      "inputRef": [Function],
                      "labelId": [Function],
                      "multiple": [Function],
                      "name": [Function],
                      "onBlur": [Function],
                      "onChange": [Function],
                      "onClose": [Function],
                      "onFocus": [Function],
                      "onOpen": [Function],
                      "open": [Function],
                      "readOnly": [Function],
                      "renderValue": [Function],
                      "tabIndex": [Function],
                      "type": [Function],
                      "value": [Function],
                      "variant": [Function],
                    },
                    "render": [Function],
                  }
                }
                inputProps={
                  Object {
                    "IconComponent": Object {
                      "$$typeof": Symbol(react.memo),
                      "compare": null,
                      "type": Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      },
                    },
                    "MenuProps": undefined,
                    "SelectDisplayProps": Object {
                      "id": "demo-simple-select",
                    },
                    "autoWidth": false,
                    "children": Array [
                      <WithStyles(ForwardRef(MenuItem))
                        value="No access"
                      >
                        No access
                      </WithStyles(ForwardRef(MenuItem))>,
                      <WithStyles(ForwardRef(MenuItem))
                        value="View"
                      >
                        View
                      </WithStyles(ForwardRef(MenuItem))>,
                      <WithStyles(ForwardRef(MenuItem))
                        value="Edit"
                      >
                        Edit
                      </WithStyles(ForwardRef(MenuItem))>,
                      <WithStyles(ForwardRef(MenuItem))
                        value="Append"
                      >
                        Append
                      </WithStyles(ForwardRef(MenuItem))>,
                      <WithStyles(ForwardRef(MenuItem))
                        value="Control"
                      >
                        Control
                      </WithStyles(ForwardRef(MenuItem))>,
                    ],
                    "classes": Object {
                      "disabled": "Mui-disabled",
                      "filled": "MuiSelect-filled",
                      "icon": "MuiSelect-icon",
                      "iconFilled": "MuiSelect-iconFilled",
                      "iconOpen": "MuiSelect-iconOpen",
                      "iconOutlined": "MuiSelect-iconOutlined",
                      "nativeInput": "MuiSelect-nativeInput",
                      "outlined": "MuiSelect-outlined",
                      "root": "MuiSelect-root",
                      "select": "MuiSelect-select",
                      "selectMenu": "MuiSelect-selectMenu",
                    },
                    "displayEmpty": false,
                    "labelId": "demo-simple-select-label",
                    "multiple": false,
                    "onClose": undefined,
                    "onOpen": undefined,
                    "open": undefined,
                    "renderValue": undefined,
                    "type": undefined,
                    "variant": "standard",
                  }
                }
                multiline={false}
                onChange={[Function]}
                type="text"
                value="Append"
              >
                <div
                  className="MuiInputBase-root MuiInput-root MuiInput-underline"
                  onClick={[Function]}
                >
                  <ForwardRef(SelectInput)
                    IconComponent={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        },
                      }
                    }
                    SelectDisplayProps={
                      Object {
                        "id": "demo-simple-select",
                      }
                    }
                    autoWidth={false}
                    className="MuiInputBase-input MuiInput-input"
                    classes={
                      Object {
                        "disabled": "Mui-disabled",
                        "filled": "MuiSelect-filled",
                        "icon": "MuiSelect-icon",
                        "iconFilled": "MuiSelect-iconFilled",
                        "iconOpen": "MuiSelect-iconOpen",
                        "iconOutlined": "MuiSelect-iconOutlined",
                        "nativeInput": "MuiSelect-nativeInput",
                        "outlined": "MuiSelect-outlined",
                        "root": "MuiSelect-root",
                        "select": "MuiSelect-select",
                        "selectMenu": "MuiSelect-selectMenu",
                      }
                    }
                    displayEmpty={false}
                    inputRef={[Function]}
                    labelId="demo-simple-select-label"
                    multiple={false}
                    onAnimationStart={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="Append"
                    variant="standard"
                  >
                    <div
                      aria-haspopup="listbox"
                      aria-labelledby="demo-simple-select-label demo-simple-select"
                      className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                      id="demo-simple-select"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      Append
                    </div>
                    <input
                      aria-hidden={true}
                      className="MuiSelect-nativeInput"
                      onAnimationStart={[Function]}
                      onChange={[Function]}
                      tabIndex={-1}
                      value="Append"
                    />
                    <ForwardRef(ArrowDropDownIcon)
                      className="MuiSelect-icon"
                    >
                      <WithStyles(ForwardRef(SvgIcon))
                        className="MuiSelect-icon"
                      >
                        <ForwardRef(SvgIcon)
                          className="MuiSelect-icon"
                          classes={
                            Object {
                              "colorAction": "MuiSvgIcon-colorAction",
                              "colorDisabled": "MuiSvgIcon-colorDisabled",
                              "colorError": "MuiSvgIcon-colorError",
                              "colorPrimary": "MuiSvgIcon-colorPrimary",
                              "colorSecondary": "MuiSvgIcon-colorSecondary",
                              "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                              "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                              "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                              "root": "MuiSvgIcon-root",
                            }
                          }
                        >
                          <svg
                            aria-hidden={true}
                            className="MuiSvgIcon-root MuiSelect-icon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 10l5 5 5-5z"
                            />
                          </svg>
                        </ForwardRef(SvgIcon)>
                      </WithStyles(ForwardRef(SvgIcon))>
                    </ForwardRef(ArrowDropDownIcon)>
                    <WithStyles(ForwardRef(Menu))
                      MenuListProps={
                        Object {
                          "aria-labelledby": "demo-simple-select-label",
                          "disableListWrap": true,
                          "role": "listbox",
                        }
                      }
                      PaperProps={
                        Object {
                          "style": Object {
                            "minWidth": undefined,
                          },
                        }
                      }
                      anchorEl={
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-label demo-simple-select"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                          id="demo-simple-select"
                          role="button"
                          tabindex="0"
                        >
                          Append
                        </div>
                      }
                      id="menu-"
                      onClose={[Function]}
                      open={false}
                    >
                      <ForwardRef(Menu)
                        MenuListProps={
                          Object {
                            "aria-labelledby": "demo-simple-select-label",
                            "disableListWrap": true,
                            "role": "listbox",
                          }
                        }
                        PaperProps={
                          Object {
                            "style": Object {
                              "minWidth": undefined,
                            },
                          }
                        }
                        anchorEl={
                          <div
                            aria-haspopup="listbox"
                            aria-labelledby="demo-simple-select-label demo-simple-select"
                            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                            id="demo-simple-select"
                            role="button"
                            tabindex="0"
                          >
                            Append
                          </div>
                        }
                        classes={
                          Object {
                            "list": "MuiMenu-list",
                            "paper": "MuiMenu-paper",
                          }
                        }
                        id="menu-"
                        onClose={[Function]}
                        open={false}
                      >
                        <WithStyles(ForwardRef(Popover))
                          PaperProps={
                            Object {
                              "classes": Object {
                                "root": "MuiMenu-paper",
                              },
                              "style": Object {
                                "minWidth": undefined,
                              },
                            }
                          }
                          anchorEl={
                            <div
                              aria-haspopup="listbox"
                              aria-labelledby="demo-simple-select-label demo-simple-select"
                              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                              id="demo-simple-select"
                              role="button"
                              tabindex="0"
                            >
                              Append
                            </div>
                          }
                          anchorOrigin={
                            Object {
                              "horizontal": "left",
                              "vertical": "top",
                            }
                          }
                          getContentAnchorEl={[Function]}
                          id="menu-"
                          onClose={[Function]}
                          onEntering={[Function]}
                          open={false}
                          transformOrigin={
                            Object {
                              "horizontal": "left",
                              "vertical": "top",
                            }
                          }
                          transitionDuration="auto"
                        >
                          <ForwardRef(Popover)
                            PaperProps={
                              Object {
                                "classes": Object {
                                  "root": "MuiMenu-paper",
                                },
                                "style": Object {
                                  "minWidth": undefined,
                                },
                              }
                            }
                            anchorEl={
                              <div
                                aria-haspopup="listbox"
                                aria-labelledby="demo-simple-select-label demo-simple-select"
                                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                                id="demo-simple-select"
                                role="button"
                                tabindex="0"
                              >
                                Append
                              </div>
                            }
                            anchorOrigin={
                              Object {
                                "horizontal": "left",
                                "vertical": "top",
                              }
                            }
                            classes={
                              Object {
                                "paper": "MuiPopover-paper",
                                "root": "MuiPopover-root",
                              }
                            }
                            getContentAnchorEl={[Function]}
                            id="menu-"
                            onClose={[Function]}
                            onEntering={[Function]}
                            open={false}
                            transformOrigin={
                              Object {
                                "horizontal": "left",
                                "vertical": "top",
                              }
                            }
                            transitionDuration="auto"
                          >
                            <ForwardRef(Modal)
                              BackdropProps={
                                Object {
                                  "invisible": true,
                                }
                              }
                              className="MuiPopover-root"
                              container={<body />}
                              id="menu-"
                              onClose={[Function]}
                              open={false}
                            />
                          </ForwardRef(Popover)>
                        </WithStyles(ForwardRef(Popover))>
                      </ForwardRef(Menu)>
                    </WithStyles(ForwardRef(Menu))>
                  </ForwardRef(SelectInput)>
                </div>
              </ForwardRef(InputBase)>
            </WithStyles(ForwardRef(InputBase))>
          </ForwardRef(Input)>
        </WithStyles(ForwardRef(Input))>
      </ForwardRef(Select)>
    </WithStyles(ForwardRef(Select))>
  </section>
</PermissionsForm>
`;
